# ionic-conference-app

./: package-lock.json  package.json
src/: BUILD.bazel
src/app/: BUILD.bazel
src/app/pages/about/: BUILD.bazel
src/app/pages/account/: BUILD.bazel
src/app/pages/login/: BUILD.bazel
src/app/pages/map/: BUILD.bazel
src/app/pages/schedule/: BUILD.bazel
src/app/pages/schedule-filter/: BUILD.bazel
src/app/pages/session-detail/: BUILD.bazel
src/app/pages/signup/: BUILD.bazel
src/app/pages/speaker-detail/: BUILD.bazel
src/app/pages/speaker-list/: BUILD.bazel
src/app/pages/support/: BUILD.bazel
src/app/pages/tabs-page/: BUILD.bazel
src/app/pages/tutorial/: BUILD.bazel
src/theme/: BUILD.bazel
