package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "about_scss",
    src = "about.scss",
)

ng_module(
    name = "about_module_ts",
    srcs = ["../../../../../ionic-conference-app/src/app/pages/about/about.module.ts","../../../../../ionic-conference-app/src/app/pages/about/about.ts","../../../../../ionic-conference-app/src/app/pages/about-popover/about-popover.ts","../../../../../ionic-conference-app/src/app/pages/about/about-routing.module.ts"],
    assets = ["../../../../../ionic-conference-app/src/app/pages/about/about.html",":about_scss"],
    deps = ["@npm//@types","@npm//@angular/platform-browser","@npm//@angular/core","@npm//@angular/common","@npm//@angular/forms","@npm//@ionic/angular","@npm//@angular/router"],
)