package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "account_scss",
    src = "account.scss",
)

ng_module(
    name = "account_module_ts",
    srcs = ["../../../../../ionic-conference-app/src/app/pages/account/account.module.ts","../../../../../ionic-conference-app/src/app/pages/account/account.ts","../../../../../ionic-conference-app/src/app/pages/account/account-routing.module.ts","../../../../../ionic-conference-app/src/app/providers/user-data.ts"],
    assets = ["../../../../../ionic-conference-app/src/app/pages/account/account.html",":account_scss"],
    deps = ["@npm//@types","@npm//@angular/platform-browser","@npm//@angular/core","@npm//@angular/common","@npm//@ionic/angular","@npm//@angular/router"],
)