package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "schedule_scss",
    src = "schedule.scss",
)

ng_module(
    name = "schedule_module_ts",
    srcs = ["../../../../../ionic-conference-app/src/app/pages/schedule/schedule.module.ts","../../../../../ionic-conference-app/src/app/pages/schedule/schedule.ts","../../../../../ionic-conference-app/src/app/pages/schedule-filter/schedule-filter.ts","../../../../../ionic-conference-app/src/app/pages/schedule/schedule-routing.module.ts"],
    deps = ["@npm//@types","@npm//@angular/platform-browser","@npm//@angular/core","@npm//@angular/common","@npm//@angular/forms","@npm//@ionic/angular","@npm//@angular/router"],
)