package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "speaker-detail_scss",
    src = "speaker-detail.scss",
)

ng_module(
    name = "speaker-detail_module_ts",
    srcs = ["../../../../../ionic-conference-app/src/app/pages/speaker-detail/speaker-detail.module.ts","../../../../../ionic-conference-app/src/app/pages/speaker-detail/speaker-detail.ts","../../../../../ionic-conference-app/src/app/pages/speaker-detail/speaker-detail-routing.module.ts","../../../../../ionic-conference-app/src/app/providers/conference-data.ts"],
    assets = ["../../../../../ionic-conference-app/src/app/pages/speaker-detail/speaker-detail.html",":speaker-detail_scss"],
    deps = ["@npm//@types","@npm//@angular/platform-browser","@npm//@angular/core","@npm//@angular/common","@npm//@ionic/angular","@npm//@angular/router"],
)