package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "speaker-list_scss",
    src = "speaker-list.scss",
)

ng_module(
    name = "speaker-list_module_ts",
    srcs = ["../../../../../ionic-conference-app/src/app/pages/speaker-list/speaker-list.module.ts","../../../../../ionic-conference-app/src/app/pages/speaker-list/speaker-list.ts","../../../../../ionic-conference-app/src/app/pages/speaker-list/speaker-list-routing.module.ts","../../../../../ionic-conference-app/src/app/providers/conference-data.ts"],
    assets = ["../../../../../ionic-conference-app/src/app/pages/speaker-list/speaker-list.html",":speaker-list_scss"],
    deps = ["@npm//@types","@npm//@angular/platform-browser","@npm//@angular/core","@npm//@angular/common","@npm//@ionic/angular","@npm//@angular/router","@npm//@ionic-native/in-app-browser/ngx"],
)