package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "support_scss",
    src = "support.scss",
)

ng_module(
    name = "support_module_ts",
    srcs = ["../../../../../ionic-conference-app/src/app/pages/support/support.module.ts","../../../../../ionic-conference-app/src/app/pages/support/support.ts","../../../../../ionic-conference-app/src/app/pages/support/support-routing.module.ts"],
    assets = ["../../../../../ionic-conference-app/src/app/pages/support/support.html",":support_scss"],
    deps = ["@npm//@types","@npm//@angular/platform-browser","@npm//@angular/core","@npm//@angular/common","@npm//@angular/forms","@npm//@ionic/angular","@npm//@angular/router"],
)