package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

load("@npm_angular_bazel//:index.bzl", "ng_module")

sass_binary(
    name = "tutorial_scss",
    src = "tutorial.scss",
)

ng_module(
    name = "tutorial_module_ts",
    srcs = ["../../../../../ionic-conference-app/src/app/pages/tutorial/tutorial.module.ts","../../../../../ionic-conference-app/src/app/pages/tutorial/tutorial.ts","../../../../../ionic-conference-app/src/app/pages/tutorial/tutorial-routing.module.ts"],
    assets = ["../../../../../ionic-conference-app/src/app/pages/tutorial/tutorial.html",":tutorial_scss"],
    deps = ["@npm//@types","@npm//@angular/platform-browser","@npm//@angular/core","@npm//@angular/common","@npm//@ionic/angular","@npm//@angular/router","@npm//@ionic/storage"],
)